CREATE EXTENSION IF NOT EXISTS "uuid-ossp";

-- users
CREATE TABLE users (
    id            UUID         PRIMARY KEY DEFAULT uuid_generate_v4(),
    email         VARCHAR(255) NOT NULL UNIQUE,
    password_hash VARCHAR(255) NOT NULL,
    created_at    TIMESTAMPTZ  NOT NULL DEFAULT now(),
    updated_at    TIMESTAMPTZ  NOT NULL DEFAULT now()
);

-- refresh_tokens (token rotation)
CREATE TABLE refresh_tokens (
    id         UUID         PRIMARY KEY DEFAULT uuid_generate_v4(),
    user_id    UUID         NOT NULL REFERENCES users(id) ON DELETE CASCADE,
    token_hash VARCHAR(255) NOT NULL UNIQUE,
    expires_at TIMESTAMPTZ  NOT NULL,
    revoked_at TIMESTAMPTZ  NULL,
    created_at TIMESTAMPTZ  NOT NULL DEFAULT now()
);
CREATE INDEX refresh_tokens_user_id_idx ON refresh_tokens(user_id);

-- tasks
CREATE TABLE tasks (
    id                UUID          PRIMARY KEY DEFAULT uuid_generate_v4(),
    user_id           UUID          NOT NULL REFERENCES users(id) ON DELETE CASCADE,
    title             VARCHAR(200)  NOT NULL,
    address_text      VARCHAR(400)  NOT NULL,
    latitude          NUMERIC(9,6)  NULL,
    longitude         NUMERIC(9,6)  NULL,
    duration_min      INT           NULL,
    window_start_date DATE          NULL,
    window_start_time TIME          NULL,
    window_end_date   DATE          NULL,
    window_end_time   TIME          NULL,
    sort_index        INT           NOT NULL DEFAULT 0,
    is_completed      BOOLEAN       NOT NULL DEFAULT false,
    created_at        TIMESTAMPTZ   NOT NULL DEFAULT now(),
    updated_at        TIMESTAMPTZ   NOT NULL DEFAULT now()
);
CREATE INDEX tasks_user_id_idx   ON tasks(user_id);
CREATE INDEX tasks_user_sort_idx ON tasks(user_id, sort_index);

-- routes (один маршрут на пользователя; агрегированные метрики хранятся прямо в строке)
CREATE TABLE routes (
    id                UUID         PRIMARY KEY DEFAULT uuid_generate_v4(),
    user_id           UUID         NOT NULL UNIQUE REFERENCES users(id) ON DELETE CASCADE,
    algorithm         VARCHAR(50)  NOT NULL,
    total_distance_m  INT          NOT NULL,
    total_travel_sec  INT          NOT NULL,
    total_service_sec INT          NOT NULL,
    total_wait_sec    INT          NOT NULL,
    computed_at       TIMESTAMPTZ  NOT NULL DEFAULT now()
);

-- route_stops (упорядоченные остановки маршрута)
CREATE TABLE route_stops (
    id                    UUID         PRIMARY KEY DEFAULT uuid_generate_v4(),
    route_id              UUID         NOT NULL REFERENCES routes(id) ON DELETE CASCADE,
    task_id               UUID         NOT NULL REFERENCES tasks(id)  ON DELETE CASCADE,
    position              INT          NOT NULL,
    travel_from_prev_sec  INT          NULL,
    arrive_time           TIMESTAMPTZ  NULL,
    service_start_time    TIMESTAMPTZ  NULL,
    service_end_time      TIMESTAMPTZ  NULL,
    wait_sec              INT          NULL
);
CREATE INDEX        route_stops_route_id_idx     ON route_stops(route_id);
CREATE UNIQUE INDEX route_stops_route_position_uq ON route_stops(route_id, position);
