@startuml
hide circle
skinparam linetype ortho
skinparam roundcorner 10
skinparam shadowing false

entity "users" as users {
  * id : UUID <<PK>>
  --
  * email : varchar(255) <<UQ>>
  * password_hash : varchar(255)
  * created_at : timestamptz
  * updated_at : timestamptz
}

entity "refresh_tokens" as rt {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  * token_hash : varchar(255) <<UQ>>
  * expires_at : timestamptz
    revoked_at : timestamptz NULL
  * created_at : timestamptz
}

entity "tasks" as tasks {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  * title : varchar(200)
  * address_text : varchar(400)
    latitude : numeric(9,6) NULL
    longitude : numeric(9,6) NULL
    duration_min : int NULL
    window_start_date : date NULL
    window_start_time : time NULL
    window_end_date : date NULL
    window_end_time : time NULL
  * sort_index : int
  * is_completed : boolean
  * created_at : timestamptz
  * updated_at : timestamptz
}

entity "routes" as routes {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK, UQ>>
  * algorithm : varchar(50)
  * total_distance_m : int
  * total_travel_sec : int
  * total_service_sec : int
  * total_wait_sec : int
  * computed_at : timestamptz
}

entity "route_stops" as stops {
  * id : UUID <<PK>>
  --
  * route_id : UUID <<FK>>
  * task_id : UUID <<FK>>
  * position : int
    travel_from_prev_sec : int NULL
    arrive_time : timestamptz NULL
    service_start_time : timestamptz NULL
    service_end_time : timestamptz NULL
    wait_sec : int NULL
}

users ||--o{ tasks  : "1 : N"
users ||--o| routes : "1 : 0..1"
users ||--o{ rt     : "1 : N"

routes ||--o{ stops : "1 : N"
tasks  ||--o{ stops : "1 : N"

legend right
  | <b>Обозначение</b> | <b>Смысл</b> |
  | PK | первичный ключ |
  | FK | внешний ключ |
  | UQ | ограничение уникальности |
  | * | обязательное поле (NOT NULL) |
  | NULL | поле допускает значение NULL |
  | timestamptz | дата и время с часовым поясом |
  | 1 : N | связь "один ко многим" |
  | 1 : 0..1 | связь "один к одному" (опциональная) |
endlegend

@enduml
